--- a/Gestionnaire_Livre_Jonathan_Mutala/Views/Livre/Delete.cshtml
+++ b/Gestionnaire_Livre_Jonathan_Mutala/Views/Livre/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer un livre</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Etes vous sur de pouvoir supprimer ce livre</h3>
 <div>
-    <h4>LivreTable</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
